# MySRAgent

./: .env.sample  .gitignore  CLAUDE.md  LICENSE  README.md  bench_sr_agent.py  bench_sr_agent.sh  install.sh  pyproject.toml  run_sr_agent.py  run_sr_agent.sh  run_sr_agent_interactive.py  run_sr_agent_interactive_tui.py
analysis/: 260526检查symbolic_acc.py  260526统计结果.ipynb
baseline/coding_agent/: README.md  call_tool.py  evaluate_result.py  fetch_problem.py
scripts/: 260429测试工具.ipynb  bench_coding_agent.py  bench_coding_agent.sh  test_sr_agent.py
scripts/experiments/: collect_results.py  run_08_all_tools.sh  run_08_sindy_pysr.sh  run_baseline.sh  run_property_tool_comparison.sh  run_with_prop.sh
scripts/neural/: evaluate.py  evaluate.sh
scripts/neural/algorithms/: __init__.py  equation.py  linear.py  mlp.py
scripts/neural/algorithms/build_network/: __init__.py  eye.py
scripts/neural/bench_server/: __init__.py  app.py  client.py
scripts/nn_tools/: demo_generate_data.py  eval_property.py  regenerate_srbench_labels.py  regenerate_srbench_labels_v2.py  run_property_experiments.sh  run_property_finetune.sh  run_property_pretrain_finetune.sh  run_property_scratch.sh  run_property_v2_finetune.sh  run_property_v2_scratch.sh  run_v3_finetune.sh  run_v3_scratch.sh  train.py  train_property.py  train_property_predictor.py  train_property_predictor.sh
src/experimental/: README.md
src/experimental/neural/: README.md  __init__.py  data.py  metrics.py
src/experimental/nn_tools/: README.md
src/experimental/nn_tools/datasets/: compute_labels.py  data_eq_dataset.py  data_property_dataset.py  eq_property_dataset.py  generate_property_labels.py  generate_srbench_labels.py
src/experimental/nn_tools/models/: __init__.py  embedder.py  foundation_model.py  pe.py  property_model.py  property_predictor.py
src/llmsr_bench/: __init__.py  core.py
src/llmsr_bench/algorithms/: __init__.py  linear.py  my_sr_agent.py  polynomial.py
src/sr_agent/: __init__.py  sr_agent.py  sr_agent_interactive.py
src/sr_agent/_vendor/llmsr_bench/: core.py
src/sr_agent/api/: __init__.py  core.py  deepseek_api.py  gemini_api.py  llm_api.py  llm_result.py  manual_api.py  openai_api.py  openrouter_api.py  siliconflow_api.py  tool_call_mixin.py
src/sr_agent/buffer/: base_buffer.py
src/sr_agent/cli/: __init__.py  download_models.py  tool.py  upload_models.py  web.py
src/sr_agent/parser/: __init__.py  base_parser.py  json_parser.py  openai_parser.py  text_parser.py  xml_parser.py
src/sr_agent/prompts/: base_prompt.py
src/sr_agent/skills/: __init__.py  skill_registry.py
src/sr_agent/skills/evaluate-formula-strategy/: SKILL.md
src/sr_agent/skills/pattern-mining-with-code-executor/: SKILL.md
src/sr_agent/tools/: README.md  __init__.py  ask_human.py  base_tool.py  call_pysr.py  call_sindy.py  code_executor.py  create_skill.py  edit_skill.py  evaluate.py  evaluate_code.py  evaluate_formula.py  llm_tool.py  polynomial_fit.py  predict_property.py  read_skill.py  skill_document.py  statistics.py  statistics_analysis.py  workspace_code_executor.py  workspace_shell.py
src/sr_agent/utils/: __init__.py  auto_gpu.py  df_to_3line.py  factory.py  factory_mixin.py  format_confusion_matrix.py  format_pareto_front.py  lazy_loader.py  load_model_state.py  log_exception.py  logger.py  model_store.py  sanitize_filename.py  save_args.py  serialize.py  symbolic_acc.py  utils.py
src/sr_agent/web/: __init__.py  app.py  search_record_writer.py
tests/: test_sr_agent_parallel.py
tests/api/: test_llm_api_openrouter_siliconflow.py
tests/baseline/: test_coding_agent_call_tool.py
tests/cli/: test_tool_cli.py
tests/experimental/: test_base_data_generator.py  test_base_eq_generator.py  test_foundation_model.py  test_functional_world_model_embedder.py  test_property_predictor.py
tests/parser/: test_text_parser.py  test_text_parser_integration.py
tests/tools/: test_ask_human.py  test_base_tool.py  test_call_llm.py  test_call_pysr.py  test_call_sindy.py  test_code_executor.py  test_evaluate.py  test_evaluate_code.py  test_evaluate_formula.py  test_llm_tool.py  test_polynomial_fit.py  test_predict_property.py  test_skill_document.py  test_skill_tools.py  test_statistics.py  test_statistics_analysis.py  test_workspace_shell.py
(+19 files in other folders)
