[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sr-agent"
version = "0.1.0"
description = "Symbolic Regression Agent powered by LLM"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "YuMeow", email = "yuzh19@tsinghua.org.cn"}
]
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "nd2py @ git+https://github.com/yuzhTHU/nd2py.git",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]
llm = [
    "anthropic>=0.18.0",
    "openai>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W"]
