[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sr-agent"
version = "1.0.0"
description = "Symbolic Regression Agent powered by LLM"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "YuMeow", email = "yuzh19@tsinghua.org.cn"}
]
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pandas>=2.0.0",
    "joblib>=1.3.0",
    "docstring-parser>=0.16",
    "pyyaml>=6.0",
    "rich>=13.0.0",
    "matplotlib>=3.7.0",
    "openai>=1.0.0",
    "google-genai>=1.0.0",
    "requests>=2.28.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
nn = [
    "torch>=2.0.0",
    "torch-geometric>=2.4.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]
all = [
    "sr-agent[nn,dev]",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "slow: marks tests as slow (integration tests)",
    "paid: marks tests as paid API calls (requires credits)",
]
addopts = "--quiet -m 'not slow and not paid'"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W"]
