[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sr-agent"
version = "1.2.1"
description = "Symbolic Regression Agent powered by LLM"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "YuMeow", email = "yuzh19@tsinghua.org.cn"}
]
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pandas>=2.0.0",
    "joblib>=1.3.0",
    "docstring-parser>=0.16",
    "pyyaml>=6.0",
    "rich>=13.0.0",
    "matplotlib>=3.7.0",
    "openai>=1.0.0",
    "google-genai>=1.0.0",
    "requests>=2.28.0",
    "python-dotenv>=1.0.0",
    "h5py>=3.16.0",
    "datasets>=4.8.0",
    "textual>=1.0.0",
    "prompt_toolkit>=3.0.0",
]

[project.scripts]
sr-agent-download-models = "sr_agent.cli.download_models:main"
sr-agent-upload-models = "sr_agent.cli.upload_models:main"
sr-agent-web = "sr_agent.cli.web:main"
sr-agent-tool = "sr_agent.cli.tool:main"

[project.optional-dependencies]
nn = [
    "torch>=2.0.0",
    "torch-geometric>=2.4.0",
]
tools = [
    "pysr>=1.5.10",
    "gplearn>=0.4.3",
    "pysindy>=2.1.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ipynbname>=2025.8.0.0",
    "yumeow_plot>=0.1.2",
]
web = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
]
all = [
    "sr-agent[nn,tools,dev,web]",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["sr_agent*"]

[tool.setuptools.package-data]
sr_agent = [
    "*.md",
    "*.yaml",
    "**/*.md",
    "**/*.yaml",
    "web/static/*.html",
]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "slow: marks tests as slow (integration tests)",
    "paid: marks tests as paid API calls (requires credits)",
]
addopts = "--quiet -m 'not slow and not paid'"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W"]
